# monarch-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  server.json  server.py
.github/workflows/: publish.yml  regenerate-site.yml
docs/: index.html
scripts/: analyze_logs.py
tests/: test_analytics.py  test_analyze_logs.py  test_bulk_updates.py  test_fastmcp.py  test_mcp_features.py  test_new_tools.py  test_search.py  test_structured_output.py  test_tool_coverage.py  test_validation_fastmcp.py
